--- a/TR5MidTerm/TR5MidTerm/Views/_ViewStart.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "_Layout";
+    Layout = "_Layout"; //0526 關於layout頁面
+    @*Layout = "_LayoutWithVue"; //0528 關於layout頁面 // 這似乎配合 homeController的 @@@9 //16835*@
 }
