feat(水電檔案): 建立水電主檔與明細檔四大 ViewModel，並補上前端 JS 依賴
📦 Model 建立：
- 新增 `水電主檔` 與 `水電明細檔` 對應之 ViewModel：
  - CreateViewModel / EditViewModel / DisplayViewModel / BasicViewModel 各四種

🧩 前端依賴補齊：
- 加入缺漏的 JavaScript 依賴模組於xxxroot

🔐 尚存問題：
- `承租人Controller` 中 Create POST 方法仍使用不正確的加密寫法：
  - `_context.承租人檔.Select(...)` 對應 EncryptByKey 邏輯不合理

🧼 其餘：
- 統一 ViewModel 命名風格與註解結構，利於擴展與維護

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TR5MidTerm.Models.TR5MidTermViewModels;
-@model 承租人檔VM
+@model 承租人檔DisplayViewModel
 @using TscLibCore.Commons;
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @using Microsoft.AspNetCore.Http;
@@ -33,7 +33,7 @@
     var dateType = (datetime: "datetime", date: "date");
     foreach (var propName in ((TableFieldDescDictionary)tablesField)[TableType.MasterTable.ToString()])
     {
-        var prop = typeof(承租人檔VM).GetProperty(propName.Key);
+        var prop = typeof(承租人檔DisplayViewModel).GetProperty(propName.Key);
         Type propertyType = prop.PropertyType;
         Type typeWithNullable = Nullable.GetUnderlyingType(propertyType);
         propertyType = typeWithNullable ?? propertyType;
@@ -77,10 +77,10 @@
                 </b-col>
             </b-row>
         </template>
-        <template #filter-row="slot">
-            <b-row class="mb-2">
+        <!--<template #filter-row="slot">
+            <b-row class="mb-2">-->
                 @*把不要顯示的欄位名稱放進b-col的v-if陣列中，預設僅顯示主鍵欄位，'table-actions', '__rowIndex__'不可移除*@
-                <b-col style="max-width:14em;"
+                <!--<b-col style="max-width:14em;"
                        v-for="field in slot.data.mTableFields" :key="field.key"
                        v-if="['m-table-actions', '__rowIndex__', '事業','單位','部門','分部','承租人編號','承租人','身分別編號','統一編號','行動電話','電子郵件','刪除註記','修改人','修改時間'].some(item => item === field.key) === false">
                     <b-input :placeholder="field.label"
@@ -94,7 +94,7 @@
                     <b-button @@click="slot.data.onCleanFilter" style="max-height:62px;" class="float-right" variant="detail3" :disabled="!slot.data.isFiltered">清除過濾</b-button>
                 </b-col>
             </b-row>
-        </template>
+        </template>-->
     </table-component>
 </div>
 
