--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
@@ -62,25 +62,36 @@
             <!--OP Button-->
             <b-row class="mb-2">
                 <b-col>
-                    <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-multi-modal class="mr-1" variant="detail3">多筆建立</b-button>
+                    @*<b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-multi-modal class="mr-1" variant="detail3">多筆建立</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-modal class="mr-1" variant="detail3">建立</b-button>
                     <b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.param" class="mr-1" variant="detail3">編輯</b-button>
                     <b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-del-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow" class="mr-1" variant="detail3">刪除</b-button>
-                    <b-button v-if="slot.data.operatePermissions.canExport" class="mr-1" variant="detail3" v-on:click="slot.data.onDataExport" isWaitting="!isWaitting">匯出</b-button>
+                    @*<b-button v-if="slot.data.operatePermissions.canExport" class="mr-1" variant="detail3" v-on:click="slot.data.onDataExport" isWaitting="!isWaitting">匯出</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canQuery" v-b-modal.master-table-query-modal class="mr-1" variant="detail3">進階查詢</b-button>
                     <!--Master OP Page-->
-                    <fetched-page-modal url="CreateMulti" id="master-table-create-multi-modal" title="批次新增單檔資料" :classes="['max-width-90-pt']"></fetched-page-modal>
+                    @*<fetched-page-modal url="CreateMulti" id="master-table-create-multi-modal" title="批次新增單檔資料" :classes="['max-width-90-pt']"></fetched-page-modal>*@
                     <fetched-page-modal url="Create" id="master-table-create-modal" title="新增單檔資料"></fetched-page-modal>
                     <fetched-page-modal url="Edit" :param="slot.data.selectedMasterRow?.param" id="master-table-edit-modal" title="更新資料"></fetched-page-modal>
                     <fetched-page-modal url="Delete" :param="slot.data.selectedMasterRow?.param" id="master-table-del-modal" title="刪除操作"></fetched-page-modal>
                     <query-page-modal id="master-table-query-modal" title="進階查詢" :queryfields="slot.data.mTableFields" :is_filtered="slot.data.isFiltered"></query-page-modal>
                 </b-col>
             </b-row>
-        </template>
-        <template #filter-row="slot">
             <b-row class="mb-2">
+                <b-col>
+                    <multi-input :schema="slot.data.params.data.querySchema"
+                                 :select-options="slot.data.params.data.querySelectOptions"
+                                 :value-obj="slot.data.params.data.queryData"
+                                 @*v-on:field-change="slot.data.queryChanged"*@
+                                 v-on:reset-all="slot.data.queryResetAll"
+                                 v-on:filter-click="slot.data.queryFilterClicked">
+                    </multi-input>
+                </b-col>
+            </b-row>
+        </template>
+        <!--<template #filter-row="slot">
+            <b-row class="mb-2">-->
                 @*把不要顯示的欄位名稱放進b-col的v-if陣列中，預設僅顯示主鍵欄位，'table-actions', '__rowIndex__'不可移除*@
-                <b-col style="max-width:14em;"
+                <!--<b-col style="max-width:14em;"
                        v-for="field in slot.data.mTableFields" :key="field.key"
                        v-if="['m-table-actions', '__rowIndex__', '承租人','身分別編號','統一編號','行動電話','電子郵件','刪除註記','修改人','修改時間','承租人顯示','統一編號顯示','行動電話顯示','電子郵件顯示','刪除註記顯示','身分別名稱'].some(item => item === field.key) === false">
                     <b-input :placeholder="field.label"
@@ -94,13 +105,14 @@
                     <b-button @@click="slot.data.onCleanFilter" style="max-height:62px;" class="float-right" variant="detail3" :disabled="!slot.data.isFiltered">清除過濾</b-button>
                 </b-col>
             </b-row>
-        </template>
+        </template>-->
     </table-component>
 </div>
 
 @section Scripts {
     <script>
         (function () {
+            //#region 主檔
             //主檔 Table 欄位名稱中文定義
             const _mTableFieldDesc = @masterTableDescHTML;
 
@@ -119,7 +131,6 @@
             };
 
             const dateTimePropertyName = @Json.Serialize(@dateTimePropertyName);
-
             //主檔 data source
             const _dsMasterProvider = async function (ctx) {
                 try {
@@ -137,6 +148,10 @@
                     this.totalRows = response.data.total;
 
                     let latestData = TSCC.Utility.Table.GetDataSource.call(this, masterTableKeys, response, ctx);
+
+                    //#region 選取清單
+                    //#endregion
+
 
                     //轉成台灣時間
                     latestData.forEach(data => {
@@ -184,15 +199,8 @@
                     });
                 }
             }
-
-            const _assignFilter = function (filterData) {
-                let shouldRefresh = this.isFiltered || (filterData && Object.keys(filterData).length > 0);
-                this.isFiltered = !!filterData && Object.keys(filterData).length > 0;
-                dsMasterProviderParams.searchBy = filterData;
-                shouldRefresh && this.refreshMasterTable();
-            }
-
-            //匯出ods
+            //#endregion
+            //#region 匯出ods
             const _onDataExport = async function () {
                 let response = await axios.post('@Url.Action("Export","TR5MidTermController")', dsMasterProviderParams, {
                     responseType: 'blob',
@@ -210,6 +218,8 @@
                 document.body.appendChild(link);
                 link.click();
             }
+            //#endregion
+            // #region filter
 
             //覆寫欄位尋找與清除事件
             const _onFilterValueUpdate = function (event) {
@@ -223,6 +233,13 @@
                     }
                 }
                 _assignFilter.call(this, filterDataObj);
+            }
+
+            const _assignFilter = function (filterData) {
+                let shouldRefresh = this.isFiltered || (filterData && Object.keys(filterData).length > 0);
+                this.isFiltered = !!filterData && Object.keys(filterData).length > 0;
+                dsMasterProviderParams.searchBy = filterData;
+                shouldRefresh && this.refreshMasterTable();
             }
 
             const _onAdvanceSearch = function(qParams) {
@@ -264,21 +281,115 @@
                 console.log("_onMounted customize");
             }
 
-            //要注入的自訂參數
-            let _opPermiss = { canCreate: @canCreate, canUpdate: @canUpdate, canDelete: @canDelete, canQuery: @canQuery, canExport: @canExport };
-            const params = { data: null, methods: null };
-            params.data = {
-                mTableFieldDesc: _mTableFieldDesc,
-                operatePermissions: _opPermiss,
-                isFiltered: false,
-                isNewItemOnTop: true,
+            // #endregion
+            //#region 自訂query
+            const _querySelectOptions = Vue.reactive({
+
+                事業: ConvertSelectListItemsToBFormSelectOptions(@Json.Serialize(ViewBag.事業選單)),
+                單位: ConvertSelectListItemsToBFormSelectOptions(@Json.Serialize(ViewBag.單位選單)),
+                部門: ConvertSelectListItemsToBFormSelectOptions(@Json.Serialize(ViewBag.部門選單)),
+                分部: ConvertSelectListItemsToBFormSelectOptions(@Json.Serialize(ViewBag.分部選單)),
+                刪除註記: [
+                    { text: '不限', value: '%' },
+                     { text: '是', value: "true"},
+                     { text: '否', value: "false"}],
+            });
+
+            const _querySchema = [
+                { key: '事業', label: '事業', type: 'select' },
+                { key: '單位', label: '單位', type: 'select' },
+                { key: '部門', label: '部門', type: 'select' },
+                { key: '分部', label: '分部', type: 'select' },
+                { key: '刪除註記', label: '刪除註記', type: 'radio', useBoostrapButtons: true }, // slot 會自訂成 button group
+                 
+            ];
+            const _queryChanged = function (key, value) {
+                let filterDataObj = {};
+                this.params.querySchema.forEach((item) => {
+                    let val = this.params.queryData[item.key];
+                    if (val != null && val !== '') {
+                        filterDataObj[item.key] = { condit: 'eq', value: val };
+                    }
+                });
+                _assignFilter.call(this, filterDataObj); // ← 套用過濾條件
+            };
+
+            //當按下查詢按鈕
+            const _queryFilterClicked = function () {
+                _onAdvanceSearch.call(this, getQueryCondits.call(this));
+            };
+
+            const getQueryCondits = function () {
+                let filterDataObj = {};
+
+                this.params.data.querySchema.forEach((item) => {
+                    let val = this.params.data.queryData[item.key];
+                    @*debugger;*@
+                    if (val === null || val === '' || val === '%' || val === 'TS' || val.length === 0) {
+                        return;
+                    }
+
+                    filterDataObj[item.key] = { condit: 'eq', value: val };
+                });
+                return filterDataObj;
+            }
+            //按下清除鈕會觸發的function。清除下拉選單內容、回復預設選項，並重新讀取資料。
+            const _queryResetAll = function () {
+                _queryData.事業 = '';
+                _queryData.單位 = '';
+                _queryData.部門 = '';
+                _queryData.分部 = '';
+                _queryData.刪除註記 = '%';
+
+                _onAdvanceSearch.call(this, getQueryCondits.call(this));
+            }
+            //給default value
+            const _queryData = Vue.reactive({
                 事業: '',
                 單位: '',
                 部門: '',
                 分部: '',
-                承租人編號: '',
+                刪除註記: '%',
+      
+            });
+
+
+            //#endregion
+            // #region 注入data
+            let _opPermiss = { canCreate: @canCreate, canUpdate: @canUpdate, canDelete: @canDelete, canQuery: @canQuery, canExport: @canExport };
+            const params = { data: null, methods: null };
+            //要注入的自訂參數
+            params.data = {
+                //#region codeGenerator
+                mTableFieldDesc: _mTableFieldDesc,
+                operatePermissions: _opPermiss,
+                isFiltered: false,
+                isNewItemOnTop: true,
+    
+                //#endregion
+                //#region 自定義query注入
+                querySchema: _querySchema,
+                querySelectOptions: _querySelectOptions,
+                queryData: _queryData,
+                filter: {
+                    事業: '',
+                    單位: '',
+                    部門: '',
+                    分部: '',
+                    刪除註記: ''
+                },
+                事業: '',
+                @*單位: '',
+                部門: '',
+                分部: '',
+                刪除註記: ''*@
+
+                //#endregion
             }
+            //#endregion
+            // #region 注入methods
             params.methods = {
+                //#region codeGenerator
                 //系統覆寫
                 dsMasterProvider: _dsMasterProvider,
                 onMasterRowSelect: _onMasterRowSelect,
@@ -286,12 +397,22 @@
                 onFiltered: _onFiltered,
                 onBeforeMount: _onBeforeMount,
                 onMounted: _onMounted,
-                //User自訂
+                //User自訂(codegenerator)
                 onFilterValueUpdate: _onFilterValueUpdate,
                 onAdvanceSearch: _onAdvanceSearch,
                 onCleanFilter: _onCleanFilter,
                 onDataExport: _onDataExport,
+                //#endregion
+                //#region 自定義query注入
+                queryChanged: _queryChanged,
+                queryResetAll: _queryResetAll,
+                queryFilterClicked: _queryFilterClicked,
+                //#endregion
             };
+
+            //#endregion
+
+
             //掛載Table
             TSC_NS.CreateVue(params).$mount('#tr5midtermcontroller-index');
         })();
