--- a/TR5MidTerm/TR5MidTerm/Views/_ViewStart.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/_ViewStart.cshtml
@@ -2,3 +2,5 @@
     Layout = "_Layout"; //0526 關於layout頁面
     @*Layout = "_LayoutWithVue"; //0528 關於layout頁面 // 這似乎配合 homeController的 @@@9 //16835*@
 }
+<script src="~/js/general-input-editor.js" asp-append-version="true"></script>
+<script src="~/js/multi-input.js" asp-append-version="true"></script>
